[project]
name = "expensy"
version = "1.2.0"
description = "an expense tracker tool to manage your expenses"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Omar Arabi", email = "omarbuisness7@gmail.com" }]
dependencies = [
    "click>=8.2.1,<9",
    "colorama>=0.4.6,<1",
    "pandas>=2.3.1,<3",
]

[project.urls]
Homepage = "https://github.com/Omar-Arabi1/expensy"

[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"

[project.scripts]
cliper = "expensy.__main__:main"